--- a/Projeto/frontend/src/styles/ForgotPassword.css
+++ b/Projeto/frontend/src/styles/ForgotPassword.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("/background.jpg");
+  background-image: url("../images/background.jpg");
   background-size: cover;
   background-position: center;
 }
