--- a/Projeto/frontend/src/styles/cadastro.css
+++ b/Projeto/frontend/src/styles/cadastro.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .cadastro-container {
   display: flex;
   align-items: center;
@@ -49,6 +54,7 @@ input {
 .login-link:hover {
   color: yellow;
 }
+
 .login-link {
   display: block;
   margin-top: 10px;
