--- a/Projeto/frontend/src/main.css
+++ b/Projeto/frontend/src/main.css
@@ -8,7 +8,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background-color: #121212;
+  background-color: black;
   color: white;
   font-family: Arial, sans-serif;
 }
