--- a/Projeto/frontend/src/styles/home.css
+++ b/Projeto/frontend/src/styles/home.css
@@ -8,7 +8,8 @@
 }
 
 .home-container h1 {
-  color: #007bff; /* Azul */
+  color: #007bff;
+  /* Azul */
   font-size: 24px;
   font-weight: bold;
 }
