--- a/Projeto/frontend/src/styles/Veiculos.css
+++ b/Projeto/frontend/src/styles/Veiculos.css
@@ -35,7 +35,7 @@
   background-color: darkgreen;
 }
 
-.botao-alugado {
+.botao-cancelar {
   background-color: red;
   color: white;
   padding: 8px 16px;
@@ -43,7 +43,6 @@
   border-radius: 10px;
   margin: 10px auto;
   display: block;
-  cursor: not-allowed;
 }
 
 .btn-acao:disabled {
