--- a/Projeto/frontend/src/styles/cadastro.css
+++ b/Projeto/frontend/src/styles/cadastro.css
@@ -9,10 +9,9 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("/background.jpg");
+  background-image: url("../images/background.jpg");
   background-size: cover;
   background-position: center;
-  padding: 30px;
 }
 
 .cadastro-box {
@@ -38,8 +37,15 @@
   }
 }
 
+h1 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: yellow;
+}
+
 .input-group {
   margin-bottom: 15px;
+  position: relative;
 }
 
 input {
@@ -84,15 +90,10 @@ input {
   background-color: #ffcc00;
 }
 
-.error-message {
-  color: red;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-
 .login-link {
   display: block;
-  margin-top: 10px;
+  margin-top: 15px;
+  text-align: center;
   color: white;
   text-decoration: none;
   font-size: 14px;
@@ -101,4 +102,50 @@ input {
 
 .login-link:hover {
   color: yellow;
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.toggle-password-cadastro {
+  background: none;
+  border: none;
+  position: absolute;
+  right: 15px;
+  top: 60%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: black;
+  font-size: 18px;
+}
+
+.password-strength {
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.password-strength.fraca {
+  color: red;
+}
+
+.password-strength.media {
+  color: yellow;
+}
+
+.password-strength.forte {
+  color: #28a745;
+}
+
+.senha-nao-coincide {
+  color: red;
+  font-size: 13px;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  text-align: center;
 }
