--- a/Projeto/frontend/src/main.css
+++ b/Projeto/frontend/src/main.css
@@ -8,14 +8,23 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  font-family: "Poppins", sans-serif;
   background-color: black;
   color: white;
-  font-family: Arial, sans-serif;
 }
 
 main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+  flex: 1;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.main-content {
+  flex: 1;
+  height: 100vh;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
 }
