--- a/Projeto/frontend/src/styles/MinhaConta.css
+++ b/Projeto/frontend/src/styles/MinhaConta.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.main {
+  background-image: url("../images/fundoPadrao.png");
+
+}
+
 .container-minha-conta {
   max-width: 1200px;
   width: 50%;
@@ -102,6 +107,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -212,6 +218,7 @@
   font-size: 18px;
   z-index: 2;
 }
+
 .clear-password {
   background: none;
   border: none;
@@ -223,8 +230,10 @@
   color: #bbb;
   font-size: 18px;
 }
+
 .clear-password:hover {
-  color: red; /* Altera a cor do ícone para vermelho quando o usuário passar o mouse sobre o botão */
+  color: red;
+  /* Altera a cor do ícone para vermelho quando o usuário passar o mouse sobre o botão */
 }
 
 .password-strength {
